--- a/index.html
+++ b/index.html
@@ -5,4 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <title>Curso Git</title>
+    <title>segunda alteração</title>
+    <title>modificando arquivo para primeira branch</title>
 </head>
